Alteração em todos os códigos da aplicação